# wingman

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  run-wingman.ps1  wingman.bat
docs/adr/: 001-easyocr-for-screen-number-detection.md  002-keyboard-library-for-game-input.md  003-mouse-movement-flight-control-investigation.md
wingman/: ai.py  capture.py  config.yaml  controller.py  main.py  vision.py
